--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 14px;
 	vertical-align: baseline;
-  color:#fff;
+  color:#52C8CF;
 }
 em, i {font-style: normal;}
 /* HTML5 display-role reset for older browsers */
@@ -86,7 +86,7 @@ a {color:#352017; text-decoration:none;}
 /* layout */
 
 body, html {
-  background-color:#3FADBC;
+  background-color:#FFFCF0;
   margin:0 auto;
   max-width:600px;
 }
@@ -115,7 +115,7 @@ body, html {
   left:0;
   right:0;
   height:100vh;
-  background-color:#3FADBC;
+  background-color:#DBFFF4;
   animation:fade-out-bg 4s ease-in forwards;
   opacity:1;}
 .ly-contents.type-fixed p  {position:relative; top:0; padding:10px 0; animation:fade-out 2s linear forwards;}
@@ -126,16 +126,25 @@ body, html {
 .txt-greet em {display:block; line-height:30px; margin-top:10px; text-align:left;}
 .txt-greet i {display:block; line-height:22px; color:#e2e2e2;}
 
-.ly-contents {display:flex; width:100%; padding: 220px 0; height:auto; overflow-y:auto; flex-direction:column; text-align:center; justify-content: center;}
+.ly-contents {display:flex; width:100%; padding: 220px 0;
+  height:auto; overflow-y:auto;
+  flex-direction:column;
+  text-align:center;
+  justify-content: center;}
 .ly-contents.type-last {padding:220px 0 280px 0;}
 .ly-contents.type-userinfo p,
 .ly-contents.type-userinfo span {margin:10px 0; line-height:26px;}
 .btn-userinfo {position:relative; display:block; width:100px; height:40px; margin:30px auto;
-line-height:40px; color:#fff; background: rgba(255,255,255,0.2); border-radius:10px; cursor: pointer;}
+line-height:40px; color:#52C8CF; border:1px solid #52C8CF; background:rgba(255,255,255,0.6); border-radius:10px; cursor: pointer;}
 
-.wrap-input {position:relative; width:120px; margin:10px auto; padding:0 0 10px 100px; box-sizing:border-box; border-bottom:2px solid #fff;}
-.wrap-input input {position:absolute; top:0; right:20px; width:100px; height:36px; z-index:9; background:none; border:none; box-sizing:border-box;
-color: rgba(0,0,0,0);}
+.wrap-input {position:relative; width:120px; margin:10px auto; padding:0 0 10px 100px;
+  box-sizing:border-box;
+  border-bottom:2px solid #FFCDE5;}
+.wrap-input input {position:absolute; top:0; right:20px; width:100px; height:36px;
+  z-index:9; background:none; border:none;
+  box-sizing:border-box;
+  color: rgba(0,0,0,0);
+}
 .wrap-input input:focus-visible {outline:none; border:1px solid #ccc;}
 .wrap-input b {position:absolute; top:0; right:20px; width:100px; height:36px;line-height: 25px;
  z-index:1; white-space: nowrap; text-overflow: ellipsis; overflow:hidden; }
@@ -160,7 +169,10 @@ color: rgba(0,0,0,0);}
 .list-mind ul li p {margin-bottom:10px;}
 .wrap-accountnum textarea {opacity:0; width:0; height:0;}
 .txt-accountinfo {display:flex; justify-content: space-between;}
-.wrap-accountnum button {display:inline-block; padding:0 8px; border-radius:3px; border:1px solid #fff; background:#f1f1f1; color:#3FADBC;}
+.wrap-accountnum button {display:inline-block; padding:0 8px; border-radius:3px;
+  border:1px solid #fff;
+  background:#f1f1f1;
+  color:#3FADBC;}
 
 .ly-contents.type-location > p {margin:5px 0;}
 
@@ -175,7 +187,9 @@ color: rgba(0,0,0,0);}
 .list-fm li {padding:10px;}
 .list-fm li span {display:inline-block; min-width:160px; text-align:left; color:#ddd; font-size:13px;}
 .list-fm li span i {position:relative; padding:0 4px; color:#fff; font-size:14px;}
-.list-fm li span i:first-child::after {position:absolute; top:8px; right:-3px; width:3px; height:3px; background-color:#c0c0c0; border-radius:50%; content:'';}
+.list-fm li span i:first-child::after {position:absolute;
+  top:8px; right:-3px; width:3px; height:3px;
+  background-color:#c0c0c0; border-radius:50%; content:'';}
 
 
 /* photo silder */
@@ -236,8 +250,6 @@ color: rgba(0,0,0,0);}
 .ic05 {opacity:0.7; top:40%; left:90%; animation:circle infinite 8s linear;}
 .ic06 {opacity:1; top:60%; left:12%; animation:circle infinite 4s linear;}
 .ic07 {opacity:0.5; top:80%; left:84%; animation:circle infinite 9s linear;}
-
-
 
 
 @keyframes fade-out {
