--- a/css/style.css
+++ b/css/style.css
@@ -76,12 +76,14 @@ a {color:#352017; text-decoration:none;}
 .mt20 {margin-top:20px;}
 .mt30 {margin-top:30px;}
 
-.txt-lg {font-size:20px !important;}
-.txt-md {font-size:16px !important;}
-.txt-sm {font-size:14px !important;}
+.txt-lg {font-size:22px !important;}
+.txt-md {font-size:18px !important;}
+.txt-sm {font-size:15px !important;}
 
 .color-gr {color:#3a5764 !important;}
 .color-lgr {color:#ddd !important;}
+
+.hidden {display:none !important;}
 
 /* layout */
 
@@ -120,7 +122,6 @@ body, html {
   opacity:1;}
 .ly-contents.type-fixed p  {position:relative; top:0; padding:10px 0; animation:fade-out 2s linear forwards;}
 
-
 .txt-greet {margin-top:10px; max-width:80%;}
 .txt-greet b {display:block; text-align:left;}
 .txt-greet em {display:block; line-height:30px; margin-top:10px; text-align:left;}
@@ -133,7 +134,7 @@ body, html {
   justify-content: center;}
 .ly-contents.type-last {padding:220px 0 280px 0;}
 .ly-contents.type-userinfo p,
-.ly-contents.type-userinfo span {margin:10px 0; line-height:26px;}
+.ly-contents.type-userinfo span {margin:10px 0; line-height:30px;}
 .btn-userinfo {position:relative; display:block; width:100px; height:40px; margin:30px auto;
 line-height:40px; color:#52C8CF; border:1px solid #52C8CF; background:rgba(255,255,255,0.6); border-radius:10px; cursor: pointer;}
 
@@ -251,6 +252,22 @@ line-height:40px; color:#52C8CF; border:1px solid #52C8CF; background:rgba(255,2
 .ic06 {opacity:1; top:60%; left:12%; animation:circle infinite 4s linear;}
 .ic07 {opacity:0.5; top:80%; left:84%; animation:circle infinite 9s linear;}
 
+.img-curser {
+  position: absolute;
+  top: 0;
+  left: 10px;
+  display:block;
+  width:1px;
+  height:80%;
+  background:#52C8CF;
+  animation: curser 1s linear infinite;
+}
+
+@keyframes curser {
+  0% {opacity:1;}
+  50% {opacity:0;}
+  100% {opacity:1;}
+}
 
 @keyframes fade-out {
   0% {top:-10px;}
