--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,10 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 14px;
+	font-size: 15px;
 	vertical-align: baseline;
   color:#52C8CF;
+  line-height:1.4em;
 }
 em, i {font-style: normal;}
 /* HTML5 display-role reset for older browsers */
@@ -81,7 +82,7 @@ a {color:#352017; text-decoration:none;}
 .txt-sm {font-size:15px !important;}
 
 .color-gr {color:#3a5764 !important;}
-.color-lgr {color:#ddd !important;}
+.color-lgr {color:#749fa5 !important;}
 
 .hidden {display:none !important;}
 
@@ -108,7 +109,7 @@ body, html {
   opacity:0;}
 
 .ly-contents > strong,
-.ly-contents > strong > span {margin-bottom:20px; line-height:30px;}
+.ly-contents > strong > span {margin-bottom:14px; line-height:30px;}
 
 .ly-contents.type-fixed {position:absolute;
   padding:0;
@@ -125,7 +126,7 @@ body, html {
 .txt-greet {margin-top:10px; max-width:80%;}
 .txt-greet b {display:block; text-align:left;}
 .txt-greet em {display:block; line-height:30px; margin-top:10px; text-align:left;}
-.txt-greet i {display:block; line-height:22px; color:#e2e2e2;}
+.txt-greet i {display:block; line-height:22px;}
 
 .ly-contents {display:flex; width:100%; padding: 220px 0;
   height:auto; overflow-y:auto;
@@ -159,15 +160,16 @@ line-height:40px; color:#52C8CF; border:1px solid #52C8CF; background:rgba(255,2
 
 .wrap-map {min-width:340px; width:400px; height:400px; margin:10px auto;}
 .wrap-map img {width:100%;}
-.list-maps {margin:10px auto; max-width:78%; text-align:left;}
-.list-maps li {padding:3px 0;}
-.list-maps li b {display:block; color:#555; margin-bottom:12px; text-decoration:underline;}
+.list-maps {margin:10px auto;
+  max-width:78%;
+  text-align:left;}
+.list-maps li {padding:10px 0; border-bottom:1px solid #FFCDE5;}
+.list-maps li b {display:block; color:#555; margin-bottom:8px; text-decoration:underline;}
 .list-maps li span {display:block; margin:10px 0;}
-
-.list-mind {width:70%; margin:0 auto;}
-.list-mind li > p {margin-bottom:20px; text-align:left;}
+ 
+.list-mind {width:70%; margin:30px auto 0 auto;}
+.list-mind li > p {font-weight:bold; text-align:left;}
 .list-mind ul li {padding:8px 0;}
-.list-mind ul li p {margin-bottom:10px;}
 .wrap-accountnum textarea {opacity:0; width:0; height:0;}
 .txt-accountinfo {display:flex; justify-content: space-between;}
 .wrap-accountnum button {display:inline-block; padding:0 8px; border-radius:3px;
@@ -186,11 +188,11 @@ line-height:40px; color:#52C8CF; border:1px solid #52C8CF; background:rgba(255,2
 /* .ly-contents.type-gallery {background-color:#fff;} */
 
 .list-fm li {padding:10px;}
-.list-fm li span {display:inline-block; min-width:160px; text-align:left; color:#ddd; font-size:13px;}
-.list-fm li span i {position:relative; padding:0 4px; color:#fff; font-size:14px;}
+.list-fm li span {display:inline-block; min-width:160px; text-align:left;font-size:13px;}
+.list-fm li span i {position:relative; padding:0 4px; font-size:14px;}
 .list-fm li span i:first-child::after {position:absolute;
   top:8px; right:-3px; width:3px; height:3px;
-  background-color:#c0c0c0; border-radius:50%; content:'';}
+  background-color:#52C8CF; border-radius:50%; content:'';}
 
 
 /* photo silder */
@@ -202,8 +204,8 @@ line-height:40px; color:#52C8CF; border:1px solid #52C8CF; background:rgba(255,2
 .data-photo img {width:100%; height:auto;}
 .slick-dots {margin-top:10px;}
 .slick-dots li {display:inline-block; margin:0 2px;}
-.slick-dots li button {display:inline-block; width:10px; height:4px; background-color:#bbbbbb; border:none; text-indent:-9999px;}
-.slick-dots li.slick-active button {background-color:#fff;}
+.slick-dots li button {display:inline-block; width:10px; height:4px; background-color:rgb(244, 231, 158); border:none; text-indent:-9999px;}
+.slick-dots li.slick-active button {background-color:#52C8CF;}
 
 .arrow-g {display:flex; justify-content: flex-end; margin-top:-18px;}
 .arrow-area {width:40px; height:20px; cursor:pointer;}
