--- a/css/style.css
+++ b/css/style.css
@@ -196,8 +196,8 @@ line-height:40px; color:#52C8CF; border:1px solid #52C8CF; background:rgba(255,2
 
 
 /* photo silder */
-.wrap-gallery {width:90%; margin:0 auto;}
-.slick-list {max-height:630px;}
+.wrap-gallery {width:100%;}
+.slick-list {width:100%; max-height:630px;}
 .list-photo .slick-arrow {position:absolute; width:40px; height:20px; bottom:0; opacity:0; cursor: pointer;}
 .list-photo .slick-prev {right:40px;}
 .list-photo .slick-next {right:0;}
