--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,9 @@ input::placeholder {
   .wrap-map {width:78%; height:auto;}
   .wrap-map img {width:90%;}
   .list-mind {width:80%;}
+  .wrap-map img {width:90%; margin: 0 auto;}
+  .list-mind {width:85%;}
+  .list-maps li span em {display:block;}
   
  
  }
