--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,6 @@ body, html {
   flex-direction:column;
   text-align:center;
   justify-content: center;}
-.ly-contents.type-main {padding:0;}
 .ly-contents.type-last {padding:220px 0 280px 0;}
 .ly-contents.type-userinfo p,
 .ly-contents.type-userinfo span {margin:10px 0; line-height:30px;}
@@ -156,7 +155,7 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 .img-main {width:100%; height:auto;}
 .img-main img {width:100%;}
 
-.ly-contents.type-main {position:relative;}
+.ly-contents.type-main {position:relative; padding:40px 0;}
 .ly-contents.type-main span {font-weight:bold;}
 .ly-contents.type-main span i {padding:0 4px;}
 .ly-contents.type-main p {padding:3px 0; letter-spacing:-0.8px;}
