--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ table {
 mark {background-color:#fff0b5;}
 a {color:#1d7e81; text-decoration:none;}
 
+.mt6 {margin-top:6x;}
 .mt10 {margin-top:10px;}
 .mt20 {margin-top:20px;}
 .mt30 {margin-top:30px;}
@@ -153,11 +154,11 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
  z-index:1; white-space: nowrap; text-overflow: ellipsis; overflow:hidden; }
 
 .img-main {width:100%; height:auto;}
-.img-main img {width:100%;}
+.img-main img {width:80%;}
 
-.ly-contents.type-main {position:relative; padding:40px 0;}
+.ly-contents.type-main {position:relative; padding:40px 0; height:100vh;}
 .ly-contents.type-main span {font-weight:bold;}
-.ly-contents.type-main span i {padding:0 4px;}
+.ly-contents.type-main span i {padding:0 4px; color: #FFCDE5;}
 .ly-contents.type-main p {padding:3px 0; letter-spacing:-0.8px;}
 .ly-contents.type-detail {padding:20px 40px; box-sizing:border-box; align-items: center;}
 
@@ -186,12 +187,12 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 .ly-contents.type-location > p {margin:5px 0;}
 
 .wrap-btn {display:flex; width:80%; margin:20px auto;}
-.wrap-btn .btn-map {display:inline-block; width:50%; height:46px; line-height:46px; color:#fff; background:rgba(255,255,255,0.3)}
-.wrap-btn .btn-map.naver {background: rgba(255,255,255,0.18);}
-.wrap-btn .btn-map:hover {transition:color 0.2s; color:#16646F;}
+.wrap-btn .btn-map {display:inline-block; width:50%; height:46px; line-height:46px; color:#52C8CF; background:#f0f6f4;}
+.wrap-btn .btn-map.naver {background:#fffae7;}
 
 
 /* .ly-contents.type-gallery {background-color:#fff;} */
+.ly-contents.type-fm img {margin:0 auto;}
 
 .list-fm li {padding:10px;}
 .list-fm li span {display:inline-block; min-width:160px; text-align:left;font-size:13px;}
@@ -351,6 +352,7 @@ input::placeholder {
 
 @media (max-width: 500px) { 
 
+  .img-main img {width:86%;}
   .wrap-map {width:78%; height:auto;}
   .wrap-map img {width:90%;}
   .list-mind {width:80%;}
