--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ body, html {
 .txt-greet i {display:block; line-height:22px;}
 
 .ly-contents {display:flex; width:100%; padding: 220px 0;
-  height:auto; overflow-y:auto;
+  height:auto;
   flex-direction:column;
   text-align:center;
   justify-content: center;}
@@ -162,7 +162,7 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 .ly-contents.type-main p {padding:3px 0; letter-spacing:-0.8px;}
 .ly-contents.type-detail {padding:20px 40px; box-sizing:border-box; align-items: center;}
 
-.ly-contents.type-mind p {line-height:24px;}
+.ly-contents.type-mind p {font-size:18px; line-height:24px;}
 
 .wrap-map {min-width:340px; width:400px; height:400px; margin:10px auto;}
 .wrap-map img {width:100%;}
@@ -177,12 +177,25 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 .list-maps li i {color:#1d7e81;}
 
 .list-mind {width:70%; margin:30px auto 0 auto;}
+.list-mind li {padding:10px 0; border-bottom:2px solid #ffeca1;}
+.list-mind .list-acc li {border-bottom:1px solid #ffeca1;}
+.list-mind li summary  {
+  display:flex;
+  width:100%;
+  align-items: center;
+  border:none;
+  background:none;
+  justify-content: space-between;
+  cursor: pointer;
+}
+.list-mind li:last-child {border-bottom:none;}
 .list-mind li > p {font-weight:bold; text-align:left;}
+.list-mind li .list-acc p {font-size:15px;}
 .list-mind ul li {padding:8px 0;}
 .wrap-accountnum textarea {opacity:0; width:0; height:0;}
 .txt-accountinfo {display:flex; justify-content: space-between;}
 .wrap-accountnum button {display:inline-block; padding:2px 8px; border-radius:3px;
-  border:1px solid #3FADBC;
+  border:1px solid #FFCDE5;
   background:rgba(0,0,0,0);
   color:#52cfc8;}
 
@@ -225,6 +238,8 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
   background-position: center;
   overflow: hidden; background-image: url("data:image/svg+xml,%3Csvg width='64px' height='64px' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='SVGRepo_bgCarrier' stroke-width='0'%3E%3C/g%3E%3Cg id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round'%3E%3C/g%3E%3Cg id='SVGRepo_iconCarrier'%3E%3Cpath d='M9.71069 18.2929C10.1012 18.6834 10.7344 18.6834 11.1249 18.2929L16.0123 13.4006C16.7927 12.6195 16.7924 11.3537 16.0117 10.5729L11.1213 5.68254C10.7308 5.29202 10.0976 5.29202 9.70708 5.68254C9.31655 6.07307 9.31655 6.70623 9.70708 7.09676L13.8927 11.2824C14.2833 11.6729 14.2833 12.3061 13.8927 12.6966L9.71069 16.8787C9.32016 17.2692 9.32016 17.9023 9.71069 18.2929Z' fill='%2354cfc8'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");}
 .arr-icon.prev {transform: rotate(180deg);}
+.arr-icon.down {transform: rotate(90deg);}
+.arr-icon.up {transform: rotate(270deg);}
 
 
 /* svg icon */
@@ -310,9 +325,6 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
   50% {transform: rotate(180deg);}
   100% {transform: rotate(360deg);}
 }
-
-
-
 /* scrollbar */
 
 html {
