--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ a {color:#1d7e81; text-decoration:none;}
 .txt-md {font-size:18px !important;}
 .txt-sm {font-size:15px !important;}
 
+.color-pi {color:#febedd !important;}
 .color-gr {color:#3a5764 !important;}
 .color-lgr {color:#749fa5 !important;}
 
