--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ body, html {
   text-align:center;
   justify-content: center;}
 .ly-contents.type-last {padding:220px 0 280px 0;}
-.ly-contents.type-last img {width:70%; margin:0 auto;}
+.ly-contents.type-last img {width:50%; margin:0 auto;}
 .ly-contents.type-userinfo p,
 .ly-contents.type-userinfo span {margin:10px 0; line-height:30px;}
 .btn-userinfo {position:relative; display:block; width:100px; height:40px; margin:30px auto;
@@ -166,7 +166,7 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 
 .ly-contents.type-mind p {font-size:18px; line-height:24px;}
 
-.wrap-map {min-width:340px; width:400px; height:400px; margin:10px auto;}
+.wrap-map {min-width:340px; width:100; height:400px; margin:10px auto; border-top:2px solid #ffeca1; border-bottom:2px solid #ffeca1;}
 .wrap-map img {width:100%;}
 .list-maps {margin:10px auto;
   max-width:78%;
@@ -209,7 +209,7 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 
 
 /* .ly-contents.type-gallery {background-color:#fff;} */
-.ly-contents.type-fm img {margin:0 auto;}
+.ly-contents.type-fm img {width:80%; margin:0 auto;}
 
 .list-fm li {padding:10px;}
 .list-fm li span {display:inline-block; min-width:160px; text-align:left;font-size:14px;}
@@ -371,9 +371,8 @@ input::placeholder {
 @media (max-width: 500px) { 
 
   .img-main img {width:86%;}
-  .wrap-map {width:78%; height:auto;}
-  .wrap-map img {width:90%;}
-  .wrap-map img {width:90%; margin: 0 auto;}
+  .wrap-map {width:100%; height:auto;}
+  .wrap-map img {width:100%; margin: 0 auto;}
   .list-mind {width:85%;}
   .list-maps li span em {display:block;}
   
