--- a/css/style.css
+++ b/css/style.css
@@ -254,34 +254,25 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
   background-repeat: no-repeat;
   background-position: center;
   overflow: hidden;
+  z-index: 99;
 }
 
-.svg-icon.ic-star{
-  width:14px;
-  height:14px;
-  background-image: url("data:image/svg+xml,%3Csvg width='64px' height='64px' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='SVGRepo_bgCarrier' stroke-width='0'%3E%3C/g%3E%3Cg id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round'%3E%3C/g%3E%3Cg id='SVGRepo_iconCarrier'%3E%3Cpath d='M9.15316 5.40838C10.4198 3.13613 11.0531 2 12 2C12.9469 2 13.5802 3.13612 14.8468 5.40837L15.1745 5.99623C15.5345 6.64193 15.7144 6.96479 15.9951 7.17781C16.2757 7.39083 16.6251 7.4699 17.3241 7.62805L17.9605 7.77203C20.4201 8.32856 21.65 8.60682 21.9426 9.54773C22.2352 10.4886 21.3968 11.4691 19.7199 13.4299L19.2861 13.9372C18.8096 14.4944 18.5713 14.773 18.4641 15.1177C18.357 15.4624 18.393 15.8341 18.465 16.5776L18.5306 17.2544C18.7841 19.8706 18.9109 21.1787 18.1449 21.7602C17.3788 22.3417 16.2273 21.8115 13.9243 20.7512L13.3285 20.4768C12.6741 20.1755 12.3469 20.0248 12 20.0248C11.6531 20.0248 11.3259 20.1755 10.6715 20.4768L10.0757 20.7512C7.77268 21.8115 6.62118 22.3417 5.85515 21.7602C5.08912 21.1787 5.21588 19.8706 5.4694 17.2544L5.53498 16.5776C5.60703 15.8341 5.64305 15.4624 5.53586 15.1177C5.42868 14.773 5.19043 14.4944 4.71392 13.9372L4.2801 13.4299C2.60325 11.4691 1.76482 10.4886 2.05742 9.54773C2.35002 8.60682 3.57986 8.32856 6.03954 7.77203L6.67589 7.62805C7.37485 7.4699 7.72433 7.39083 8.00494 7.17781C8.28555 6.96479 8.46553 6.64194 8.82547 5.99623L9.15316 5.40838Z' fill='%23ffffff'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
-}
-.svg-icon.ic-star2 {
-  width:14px;
-  height:14px;
-  background-image: url("data:image/svg+xml,%3Csvg width='64px' height='64px' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='SVGRepo_bgCarrier' stroke-width='0'%3E%3C/g%3E%3Cg id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round'%3E%3C/g%3E%3Cg id='SVGRepo_iconCarrier'%3E%3Cpath d='M14.857 4.92587C13.7901 2.35805 10.2099 2.35804 9.14297 4.92587L8.58369 6.27189C8.361 6.80784 7.87574 7.17228 7.3211 7.23508L5.76039 7.41179C3.12208 7.71052 2.0693 10.9949 3.96629 12.8289L5.29142 14.11C5.68291 14.4885 5.85894 15.0499 5.75098 15.596L5.43104 17.2142C4.89984 19.901 7.795 21.9982 10.1279 20.5005L11.1745 19.8286C11.6797 19.5043 12.3203 19.5043 12.8255 19.8286L13.8721 20.5005C16.205 21.9982 19.1002 19.901 18.569 17.2142L18.249 15.596C18.1411 15.0499 18.3171 14.4885 18.7086 14.11L20.0337 12.8289C21.9307 10.9949 20.8779 7.71052 18.2396 7.41179L16.6789 7.23508C16.1243 7.17228 15.639 6.80784 15.4163 6.27189L14.857 4.92587Z' fill='%23ffffff'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
-}
 .svg-icon.ic-star3 
 {
-  width:15px;
-  height:15px;
-  background-image: url("data:image/svg+xml,%3Csvg width='64px' height='64px' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='SVGRepo_bgCarrier' stroke-width='0'%3E%3C/g%3E%3Cg id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round'%3E%3C/g%3E%3Cg id='SVGRepo_iconCarrier'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M13.7137 3.90806C12.9363 2.61642 11.0637 2.61642 10.2864 3.90806L8.39925 7.04391L4.83371 7.86969C3.36509 8.20983 2.78642 9.99077 3.77464 11.1292L6.17384 13.893L5.85739 17.5392C5.72705 19.0411 7.24201 20.1418 8.63008 19.5537L12 18.126L15.37 19.5537C16.7581 20.1418 18.273 19.0411 18.1427 17.5392L17.8263 13.893L20.2254 11.1292C21.2137 9.99077 20.635 8.20983 19.1664 7.86969L15.6008 7.0439L13.7137 3.90806Z' fill='%235fd3cb'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+  width:17px;
+  height:17px;
+  background-image: url("data:image/svg+xml,%3Csvg width='64px' height='64px' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='SVGRepo_bgCarrier' stroke-width='0'%3E%3C/g%3E%3Cg id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round'%3E%3C/g%3E%3Cg id='SVGRepo_iconCarrier'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M13.7137 3.90806C12.9363 2.61642 11.0637 2.61642 10.2864 3.90806L8.39925 7.04391L4.83371 7.86969C3.36509 8.20983 2.78642 9.99077 3.77464 11.1292L6.17384 13.893L5.85739 17.5392C5.72705 19.0411 7.24201 20.1418 8.63008 19.5537L12 18.126L15.37 19.5537C16.7581 20.1418 18.273 19.0411 18.1427 17.5392L17.8263 13.893L20.2254 11.1292C21.2137 9.99077 20.635 8.20983 19.1664 7.86969L15.6008 7.0439L13.7137 3.90806Z' fill='%23ffe68a'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
   background-repeat: no-repeat no-repeat;
   background-position: center center;
   background-size: cover;
 }
 
-.ic02 {opacity:0.6; top:3%; left:40%; animation:circle infinite 4s linear;}
-.ic03 {opacity:0.2; top:10%; left:80%; animation:circle infinite 4s linear;}
-.ic04 {opacity:0.4; top:25%; left:20%; animation:circle infinite 12s linear;}
-.ic05 {opacity:0.7; top:40%; left:90%; animation:circle infinite 8s linear;}
-.ic06 {opacity:0.6; top:68%; left:12%; animation:circle infinite 4s linear;}
-.ic07 {opacity:0.4; top:80%; left:84%; animation:circle infinite 9s linear;}
+.ic02 {opacity:0.9; top:3%; left:40%; animation:circle infinite 3s linear;}
+.ic03 {opacity:0.6; top:10%; left:80%; animation:circle infinite 4s linear;}
+.ic04 {opacity:0.8; top:25%; left:20%; animation:circle infinite 4s linear;}
+.ic05 {opacity:0.6; top:40%; left:90%; animation:circle infinite 5s linear;}
+.ic06 {opacity:1; top:68%; left:12%; animation:circle infinite 4s linear;}
+.ic07 {opacity:0.8; top:80%; left:84%; animation:circle infinite 9s linear;}
 
 .img-curser {
   position: absolute;
