--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ body, html {
 
 .ly-contents > strong,
 .ly-contents > strong > span {margin-bottom:14px; line-height:30px;}
-
+.ly-contents > strong > p {font-size:22px;}
 .ly-contents.type-fixed {position:absolute;
   padding:0;
   z-index:999;
@@ -167,8 +167,8 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 
 .ly-contents.type-mind p {font-size:18px; line-height:24px;}
 
-.wrap-map {min-width:340px; width:100; height:400px; margin:10px auto; border-top:2px solid #ffeca1; border-bottom:2px solid #ffeca1;}
-.wrap-map img {width:100%;}
+.wrap-map {width:100%; height:auto; margin:10px auto;}
+.wrap-map img {width:100%; border-top:2px solid #ffeca1; border-bottom:2px solid #ffeca1;}
 .list-maps {margin:10px auto;
   max-width:78%;
   text-align:left;}
@@ -181,6 +181,7 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 
 .list-mind {width:70%; margin:30px auto 0 auto;}
 .list-mind li {padding:10px 0; border-bottom:2px solid #ffeca1;}
+.list-mind .list-acc {padding:0 10px;} 
 .list-mind .list-acc li {border-bottom:1px solid #ffeca1;}
 .list-mind li summary  {
   display:flex;
@@ -210,7 +211,7 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 
 
 /* .ly-contents.type-gallery {background-color:#fff;} */
-.ly-contents.type-fm img {width:80%; margin:0 auto;}
+.ly-contents.type-fm img {width:64%; margin:0 auto;}
 
 .list-fm li {padding:10px;}
 .list-fm li span {display:inline-block; min-width:160px; text-align:left;font-size:14px;}
@@ -222,12 +223,12 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 
 
 /* photo silder */
-.wrap-gallery {width:100%;}
-.slick-list {width:100%; max-height:630px;}
+.wrap-gallery {width:100%; max-width:520px; margin:0 auto;}
+.slick-list {width:100%; max-height:780px;}
 .list-photo .slick-arrow {position:absolute; width:30px; height:20px; bottom:5px; opacity:0; cursor: pointer;}
 .list-photo .slick-prev {right:40px;}
 .list-photo .slick-next {right:0;}
-.data-photo img {width:100%; height:auto;}
+.data-photo img {width:100%; max-width:520px; margin:0 auto; height:auto;}
 .slick-dots {margin-top:10px;}
 .slick-dots li {display:inline-block; margin:0 2px;}
 .slick-dots li button {display:inline-block; width:10px; height:4px; background-color:rgb(244, 231, 158); border:none; text-indent:-9999px;}
