--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ body, html {
   background-color:#fff5ce;
   animation:fade-out-bg 2s ease-in forwards;
   opacity:1;}
-.ly-contents.type-fixed p  {position:relative; top:0; padding:6px 0; animation:fade-out 2s linear forwards;}
+.ly-contents.type-fixed p  {position:relative; font-weight:bold; top:0; padding:6px 0; animation:fade-out 2s linear forwards;}
 
 .txt-greet {margin-top:10px; max-width:80%;}
 .txt-greet b {display:block; text-align:left;}
