--- a/css/style.css
+++ b/css/style.css
@@ -129,8 +129,8 @@ body, html {
 
 .txt-greet {margin-top:10px; max-width:80%;}
 .txt-greet b {display:block; text-align:left;}
-.txt-greet em {display:block; line-height:30px; margin-top:10px; text-align:left;}
-.txt-greet i {display:block; line-height:22px;}
+.txt-greet em {display:block; font-size:17px; letter-spacing:-1px; line-height:30px; margin-top:10px; text-align:left;}
+.txt-greet i {display:block; font-size:17px; font-weight:bold; line-height:22px;}
 
 .ly-contents {display:flex; width:100%; padding: 220px 0;
   height:auto;
@@ -217,7 +217,7 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 .list-fm li span {display:inline-block; min-width:160px; text-align:left;font-size:14px;}
 .list-fm li span i {position:relative; padding:0 4px; font-size:16px;}
 .list-fm li span i:first-child::after {position:absolute;
-  top:6px; right:-3px; width:3px; height:3px;
+  top:9px; right:-3px; width:3px; height:3px;
   background-color:#52C8CF; border-radius:50%; content:'';}
 .list-fm li  em {display:inline-block; width:60px; text-align:right;}
 
