--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 } 
 @font-face {
   font-family: 'Noto Sans KR';
-  src:url('../fonts/NotoSans-Medium.woff') format('woff'),
-  url('../fonts/NotoSans-Medium.otf') format('otf');
+  src:url('../fonts/NotoSans-Regular.woff') format('woff'),
+  url('../fonts/NotoSans-Regular.otf') format('otf');
   font-weight: 500;
 }
 @font-face {
@@ -84,6 +84,7 @@ a {color:#1d7e81; text-decoration:none;}
 .txt-md {font-size:18px !important;}
 .txt-sm {font-size:15px !important;}
 
+.color-ye {color:#ffea94 !important;}
 .color-pi {color:#febedd !important;}
 .color-gr {color:#3a5764 !important;}
 .color-lgr {color:#749fa5 !important;}
@@ -95,7 +96,7 @@ a {color:#1d7e81; text-decoration:none;}
 body, html {
   background-color:#FFFCF0;
   margin:0 auto;
-  max-width:600px;
+  max-width:520px;
 }
 .ly-start {position:relative;
   display: flex;
@@ -114,7 +115,8 @@ body, html {
 
 .ly-contents > strong,
 .ly-contents > strong > span {margin-bottom:14px; line-height:30px;}
-.ly-contents > strong > p {font-size:22px;}
+.ly-contents > strong > p,
+.ly-contents > strong > p span {font-size:22px;}
 .ly-contents.type-fixed {position:absolute;
   padding:0;
   z-index:999;
@@ -132,7 +134,7 @@ body, html {
 .txt-greet em {display:block; font-size:17px; letter-spacing:-1px; line-height:30px; margin-top:10px; text-align:left;}
 .txt-greet i {display:block; font-size:17px; font-weight:bold; line-height:22px;}
 
-.ly-contents {display:flex; width:100%; padding: 220px 0;
+.ly-contents {display:flex; width:100%; padding: 200px 0;
   height:auto;
   flex-direction:column;
   text-align:center;
@@ -197,30 +199,25 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 .list-mind li .list-acc p {font-size:15px;}
 .list-mind ul li {padding:8px 0;}
 .wrap-accountnum textarea {opacity:0; width:0; height:0;}
-.txt-accountinfo {display:flex; justify-content: space-between;}
+.txt-accountinfo {display:flex; padding-top:5px; justify-content: space-between;}
 .wrap-accountnum button {display:inline-block; padding:2px 8px; border-radius:3px;
   border:1px solid #FFCDE5;
   background:rgba(0,0,0,0);
   color:#52cfc8;}
-
 .ly-contents.type-location > p {margin:5px 0;}
 
 .wrap-btn {display:flex; width:80%; margin:20px auto;}
 .wrap-btn .btn-map {display:inline-block; width:50%; height:46px; line-height:46px; color:#52C8CF; background:#f0f6f4;}
 .wrap-btn .btn-map.naver {background:#fffae7;}
 
-
-/* .ly-contents.type-gallery {background-color:#fff;} */
 .ly-contents.type-fm img {width:64%; margin:0 auto;}
-
 .list-fm li {padding:10px;}
 .list-fm li span {display:inline-block; min-width:160px; text-align:left;font-size:14px;}
 .list-fm li span i {position:relative; padding:0 4px; font-size:16px;}
 .list-fm li span i:first-child::after {position:absolute;
-  top:9px; right:-3px; width:3px; height:3px;
+  top:11px; right:-3px; width:3px; height:3px;
   background-color:#52C8CF; border-radius:50%; content:'';}
 .list-fm li  em {display:inline-block; width:60px; text-align:right;}
-
 
 /* photo silder */
 .wrap-gallery {width:100%; max-width:520px; margin:0 auto;}
@@ -233,7 +230,6 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 .slick-dots li {display:inline-block; margin:0 2px;}
 .slick-dots li button {display:inline-block; width:10px; height:4px; background-color:rgb(244, 231, 158); border:none; text-indent:-9999px;}
 .slick-dots li.slick-active button {background-color:#52C8CF;}
-
 .arrow-g {display:flex; justify-content: flex-end; margin:-24px 10px 0 0;}
 .arrow-area {width:30px; height:20px; cursor:pointer;}
 .arr-icon { display: inline-block; width:12px; height:20px;
@@ -247,8 +243,6 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 
 
 /* svg icon */
-
-
 .svg-icon {
   position:fixed;
   display: inline-block;
@@ -258,7 +252,6 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
   overflow: hidden;
   z-index: 99;
 }
-
 .svg-icon.ic-star3 
 {
   width:17px;
@@ -268,7 +261,6 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
   background-position: center center;
   background-size: cover;
 }
-
 .ic02 {opacity:0.9; top:3%; left:40%; animation:circle infinite 3s linear;}
 .ic03 {opacity:0.6; top:10%; left:80%; animation:circle infinite 4s linear;}
 .ic04 {opacity:0.8; top:25%; left:20%; animation:circle infinite 4s linear;}
@@ -314,7 +306,6 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
   90% {opacity:0.5;}
   100% {opacity:1;}
 }
-
 @keyframes circle {
   0% {transform: rotate(0deg);}
   50% {transform: rotate(180deg);}
