--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ body, html {
   align-items: center;
   flex-direction:column; 
   z-index:999; 
-  animation: fade-in 3s forwards linear;
+  animation: fade-in 1s forwards linear;
   opacity:0;}
 
 .ly-contents > strong,
@@ -203,7 +203,7 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 .wrap-accountnum button {display:inline-block; padding:2px 8px; border-radius:3px;
   border:1px solid #FFCDE5;
   background:rgba(0,0,0,0);
-  color:#52cfc8;}
+  color:#52cfc8; cursor: pointer;}
 .ly-contents.type-location > p {margin:5px 0;}
 
 .wrap-btn {display:flex; width:80%; margin:20px auto;}
@@ -220,8 +220,14 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
 .list-fm li  em {display:inline-block; width:60px; text-align:right;}
 
 /* photo silder */
-.wrap-gallery {width:100%; max-width:520px; margin:0 auto;}
+.wrap-gallery {position: relative; width:100%; max-width:520px; margin:0 auto;}
 .slick-list {width:100%; max-height:780px;}
+
+.txt-gal {position:absolute;
+  width:160px;
+  top:10px;
+  margin-left:-80px; color:#5cc5c5; font-size:15px;
+z-index: 999;} 
 .list-photo .slick-arrow {position:absolute; width:30px; height:20px; bottom:5px; opacity:0; cursor: pointer;}
 .list-photo .slick-prev {right:40px;}
 .list-photo .slick-next {right:0;}
@@ -279,26 +285,6 @@ line-height:40px; color:#52cfc8; border:1px solid #52cfc8; background:rgba(255,2
   animation: curser 1s linear infinite;
 }
 
-@keyframes curser {
-  0% {opacity:1;}
-  50% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@keyframes fade-out {
-  0% {top:-10px;}
-  33% {top:-30px; }
-  66% {top:-50px;}
-  88% {top:-70px; opacity:0.6;}
-  100% {opacity:0; top:-90px; display:none;} 
-}
-
-@keyframes fade-out-bg {
-  0% {opacity: 1;}
-  87% {opacity: 1;}
-  88% {opacity: 0.9;}
-  100% {opacity:0;}
-}
 
 @keyframes fade-in {
   0% {opacity:0;}
